<resources>
    <string name="app_name">Eb</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="ghname">github.com/suriyadeepan</string>
    <string name="uname">suriyadeepan</string>
    <string name="umail">suriyadeepan@acm.org</string>

    <string name="tags">Tags</string>
    <string name="favorites">Favorites</string>
    <string name="stats">Statistics</string>
    <string name="reminders">Reminder</string>
    <string name="archives">Archive</string>

    <string name="config">Configuration</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="help">Help</string>

    <string name="search_hint">keywords</string>

</resources>
