<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_tags" android:icon="@drawable/ic_bookmark_black_24dp"
            android:title="@string/tags" />
        <item android:id="@+id/nav_favorites" android:icon="@drawable/ic_favorite_border_black_24dp"
            android:title="@string/favorites" />
        <item android:id="@+id/nav_stats" android:icon="@drawable/stat_sq_24"
            android:title="@string/stats" />
        <item android:id="@+id/nav_reminder" android:icon="@drawable/ic_access_alarms_black_24dp"
            android:title="@string/reminders" />
        <item android:id="@+id/nav_archive" android:icon="@drawable/ic_archive_black_24dp"
            android:title="@string/archives" />

    </group>

    <item android:title="@string/config">
        <menu>
            <item android:id="@+id/nav_settings" android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
            <item android:id="@+id/nav_logout" android:icon="@drawable/logout_sq_24"
                android:title="@string/logout" />
            <item android:id="@+id/nav_help" android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/help" />
        </menu>
    </item>

</menu>